Додає попередні стилі для мобільних пристроїв

--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
             >Web<span class="logo__word">Studio</span></a
           >
 
+          <button
+            class="mobile-btn is-open"
+            type="button"
+            aria-expanded="false"
+          >
+            <svg
+              width="40px"
+              height="40px"
+              aria-label="Перемикач мобільного меню"
+            >
+              <use
+                class="mobile-btn__icon-close"
+                href="./images/icons.svg#icon-header-close_40px"
+              ></use>
+              <use
+                class="mobile-btn__icon-menu"
+                href="./images/icons.svg#icon-header-menu_40px"
+              ></use>
+            </svg>
+          </button>
+
           <ul class="nav__list list">
             <li class="nav__item">
               <a class="nav__link link current" href="./index.html">Студія</a>
