Додає розмітку на екрани 480

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
             <li class="team__item">
               <img
                 class="team__img"
-                src="./images/teammember1.jpg"
-                alt="Портрет Ігора Дем'яненко"
-                width="270"
+                src="./images/teammember1-480.jpg"
+                srcset="./images/teammember1-480.jpg, ./images/teammember1-480@x2.jpg"
+                alt="Портрет Ігора Дем'яненко"                
               />
               <div class="team__description">
                 <h3 class="team__title">Ігор Дем'яненко</h3>
@@ -235,9 +235,9 @@
             <li class="team__item">
               <img
                 class="team__img"
-                src="./images/teammember2.jpg"
+                src="./images/teammember2-480.jpg"
+                srcset="./images/teammember2-480.jpg, ./images/teammember2-480@x2.jpg"
                 alt="Портрет Ольги Рєпіної"
-                width="270"
               />
               <div class="team__description">
                 <h3 class="team__title">Ольга Рєпіна</h3>
@@ -271,9 +271,9 @@
             <li class="team__item">
               <img
                 class="team__img"
-                src="./images/teammember3.jpg"
+                src="./images/teammember3-480.jpg"
+                srcset="./images/teammember3-480.jpg, ./images/teammember3-480@x2.jpg"
                 alt="Портрет Миколи Тарасова"
-                width="270"
               />
               <div class="team__description">
                 <h3 class="team__title">Микола Тарасов</h3>
@@ -307,9 +307,9 @@
             <li class="team__item">
               <img
                 class="team__img"
-                src="./images/teammember4.jpg"
-                alt="Портрет Михайла Єрмакова"
-                width="270"
+                src="./images/teammember4-480.jpg"
+                srcset="./images/teammember4-480.jpg, ./images/teammember4-480@x2.jpg"
+                alt="Портрет Михайла Єрмакова"               
               />
               <div class="team__description">
                 <h3 class="team__title">Михайло Єрмаков</h3>
@@ -349,14 +349,14 @@
       <div class="container">
         <h2 class="section__title">Постійні клієнти</h2>
         <ul class="customers__list list">
-          <li>
+          <li class="customers__item">
             <a class="customers__link link" href="#">
               <svg class="customers__icon" width="106px" height="60px">
                 <use href="./images/icons.svg#icon-customers-brand-yaco"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="customers__item">
             <a class="customers__link link" href="#">
               <svg class="customers__icon" width="106px" height="60px">
                 <use href="./images/icons.svg#icon-customers-brand-union"></use>
@@ -372,7 +372,7 @@
               </svg>
             </a>
           </li>
-          <li>
+          <li class="customers__item">
             <a class="customers__link link" href="#">
               <svg class="customers__icon" width="106px" height="60px">
                 <use
@@ -381,7 +381,7 @@
               </svg>
             </a>
           </li>
-          <li>
+          <li class="customers__item">
             <a class="customers__link link" href="#">
               <svg class="customers__icon" width="106px" height="60px">
                 <use href="./images/icons.svg#icon-customers-brand-brand"></use>
@@ -416,7 +416,7 @@
           </div>
           <!--Адреса-->
           <address>
-            <ul class="list">
+            <ul class="footer__list list">
               <li class="footer__item footer__map">
                 <a
                   class="link"
