Додає мобільні стилі до хедеоа і футера портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,20 +27,35 @@
             >Web<span class="logo__word">Studio</span></a
           >
 
+          <button
+            class="mobile-btn-burger js-open-menu"
+            type="button"
+          >
+            <svg
+              width="40px"
+              height="40px"
+              aria-label="Перемикач мобільного меню"
+            >
+              <use
+                class="mobile-btn-burger__icon"
+                href="./images/icons.svg#icon-header-menu_40px"
+              ></use>
+            </svg>
+          </button>
+
           <ul class="nav__list list">
             <li class="nav__item">
               <a class="nav__link link" href="./index.html">Студія</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link link current" href="./portfolio.html"
-                >Портфоліо</a
-              >
+              <a class="nav__link link current" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="nav__item">
               <a class="nav__link link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
+
         <!--Контакти-->
         <ul class="contacts list">
           <li class="contacts__item">
@@ -320,7 +335,7 @@
           </div>
           <!--Адреса-->
           <address>
-            <ul class="list">
+            <ul class="footer__list list">
               <li class="footer__item footer__map">
                 <a
                   class="link"
@@ -350,8 +365,7 @@
                   width="20px"
                   height="20px"
                 >
-                  <use href="./images/icons.svg#icon-instagram"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-instagram"></use></svg></a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--bg-color link" href="#"
@@ -360,8 +374,7 @@
                   width="20px"
                   height="20px"
                 >
-                  <use href="./images/icons.svg#icon-twitter"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-twitter"></use></svg></a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--bg-color link" href="#"
@@ -370,8 +383,7 @@
                   width="20px"
                   height="20px"
                 >
-                  <use href="./images/icons.svg#icon-facebook"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-facebook"></use></svg></a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--bg-color link" href="#"
@@ -380,8 +392,7 @@
                   width="20px"
                   height="20px"
                 >
-                  <use href="./images/icons.svg#icon-linkedin"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg></a>
             </li>
           </ul>
         </div>
@@ -405,5 +416,62 @@
         </div>
       </div>
     </footer>
+
+    <div class="mobile-menu js-menu-container">
+        <nav class="mobile-menu__nav">
+          <ul class="list js-menu-container">
+            <li>
+              <a class="mobile-menu__link link current" href="./index.html">Студія</a>
+            </li>
+            <li>
+              <a class="mobile-menu__link link" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li>
+              <a class="mobile-menu__link link" href="">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="mobile-container">
+          <ul class="mobile-contacts list">
+            <li class="mobile-contacts__item">
+              <a class="mobile-contacts__tel link" href="tel:+380961111111">
+                +38 096 111 11 11</a
+              >
+            </li>
+            <li class="mobile-contacts__item">
+              <a class="mobile-contacts__email link" href="mailto:info@devstudio.com">
+                info@devstudio.com</a
+              >
+            </li>
+          </ul>
+
+          <ul class="mobail-menu__social list">
+            <li class="mobail-menu__social-item"><a href="#" class="mobail-menu__social-link link">Instagram</a></li>
+            <li class="mobail-menu__social-item"><a href="#" class="mobail-menu__social-link link">Twitter</a></li>
+            <li class="mobail-menu__social-item"><a href="#" class="mobail-menu__social-link link">Facebook</a></li>
+            <li class="mobail-menu__social-item"><a href="#" class="mobail-menu__social-link link">LinkedIn</a></li>
+          </ul>
+        </div>
+
+        <button
+        class="mobile-menu__btn-close js-close-menu"
+        type="button"
+        aria-expanded="false"
+        aria-controls="mobile-btn"
+      >
+          <svg
+          width="40px"
+          height="40px"
+          aria-label="Перемикач мобільного меню"
+        >
+           <use
+            class="mobile-btn-close__icon"
+            href="./images/icons.svg#icon-header-close_40px"
+          ></use>
+          </svg>
+        </button>
+
+    </div>
   </body>
 </html>
