Додає таблет стилі до секції переваги

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </svg>
               </div>
               <h3 class="benefits__title">Увага до деталей</h3>
-              <p class="text">
+              <p class="benefits__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
@@ -118,7 +118,7 @@
                 </svg>
               </div>
               <h3 class="benefits__title">Пунктуальність</h3>
-              <p class="text">
+              <p class="benefits__text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
@@ -130,7 +130,7 @@
                 </svg>
               </div>
               <h3 class="benefits__title">Планування</h3>
-              <p class="text">
+              <p class="benefits__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
@@ -141,7 +141,7 @@
                 </svg>
               </div>
               <h3 class="benefits__title">Сучасні технології</h3>
-              <p class="text">
+              <p class="benefits__text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
