--- a/index.html
+++ b/index.html
@@ -192,12 +192,18 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team__list list">
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/teammember1-480.jpg"
-                srcset="./images/teammember1-480.jpg, ./images/teammember1-480@x2.jpg"
-                alt="Портрет Ігора Дем'яненко"                
+              <picture class="team__img">
+                <source srcset="./images/teammember1-480.jpg 1x, ./images/teammember1-480@2x.jpg 2x" 
+                  media="(max-width: 767px)" 
+                  sizes="(min-width: 480px) 450px, 100vw">
+                <source srcset="./images/teammember1-768.jpg 1x, ./images/teammember1-768@2x.jpg 2x" 
+                  media="(max-width: 1199px)" 
+                  sizes="(min-width: 768px) 354px, 50vw">
+                <img
+                  src="./images/teammember1-480.jpg"
+                  alt="Портрет Ігора Дем'яненко"                
               />
+              </picture>
               <div class="team__description">
                 <h3 class="team__title">Ігор Дем'яненко</h3>
                 <p class="team__text">Product Designer</p>
@@ -228,12 +234,18 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/teammember2-480.jpg"
-                srcset="./images/teammember2-480.jpg, ./images/teammember2-480@x2.jpg"
-                alt="Портрет Ольги Рєпіної"
-              />
+              <picture class="team__img">
+                <source srcset="./images/teammember2-480.jpg 1x, ./images/teammember2-480@2x.jpg 2x" 
+                  media="(max-width: 767px)" 
+                  sizes="(min-width: 480px) 450px, 100vw">
+                <source srcset="./images/teammember2-768.jpg 1x, ./images/teammember2-768@2x.jpg 2x" 
+                  media="(max-width: 1199px)" 
+                  sizes="(min-width: 768px) 354px, 50vw">
+                <img
+                  src="./images/teammember2-480.jpg"
+                  alt="Портрет Ольги Рєпіної"
+                />
+              </picture>
               <div class="team__description">
                 <h3 class="team__title">Ольга Рєпіна</h3>
                 <p class="team__text">Frontend Developer</p>
@@ -264,12 +276,18 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/teammember3-480.jpg"
-                srcset="./images/teammember3-480.jpg, ./images/teammember3-480@x2.jpg"
-                alt="Портрет Миколи Тарасова"
-              />
+              <picture class="team__img">
+                <source srcset="./images/teammember3-480.jpg 1x, ./images/teammember3-480@2x.jpg 2x" 
+                  media="(max-width: 767px)" 
+                  sizes="(min-width: 480px) 450px, 100vw">
+                <source srcset="./images/teammember3-768.jpg 1x, ./images/teammember3-768@2x.jpg 2x" 
+                  media="(max-width: 1199px)" 
+                  sizes="(min-width: 768px) 354px, 50vw">
+                <img
+                  src="./images/teammember3-480.jpg"
+                  alt="Портрет Миколи Тарасова"
+                />
+              </picture>
               <div class="team__description">
                 <h3 class="team__title">Микола Тарасов</h3>
                 <p class="team__text">Marketing</p>
@@ -300,12 +318,18 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team__img"
-                src="./images/teammember4-480.jpg"
-                srcset="./images/teammember4-480.jpg, ./images/teammember4-480@x2.jpg"
-                alt="Портрет Михайла Єрмакова"               
-              />
+              <picture class="team__img">
+                <source srcset="./images/teammember4-480.jpg 1x, ./images/teammember4-480@2x.jpg 2x" 
+                  media="(max-width: 767px)" 
+                  sizes="(min-width: 480px) 450px, 100vw">
+                <source srcset="./images/teammember4-768.jpg 1x, ./images/teammember4-768@2x.jpg 2x" 
+                  media="(max-width: 1199px)" 
+                  sizes="(min-width: 768px) 354px, 50vw">
+                <img
+                  src="./images/teammember4-480.jpg"
+                  alt="Портрет Михайла Єрмакова"               
+                />
+              </picture>
               <div class="team__description">
                 <h3 class="team__title">Михайло Єрмаков</h3>
                 <p class="team__text">UI Designer</p>
