Додає десктоп стилі

--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
                 <source srcset="./images/teammember1-768.jpg 1x, ./images/teammember1-768@2x.jpg 2x" 
                   media="(max-width: 1199px)" 
                   sizes="(min-width: 768px) 354px, 50vw">
+                <source srcset="./images/teammember1.jpg" 
+                  media="(min-width: 1200px)" 
+                  sizes="(min-width: 1200px) 270px, 25vw">
                 <img
                   src="./images/teammember1-480.jpg"
                   alt="Портрет Ігора Дем'яненко"                
@@ -241,6 +244,9 @@
                 <source srcset="./images/teammember2-768.jpg 1x, ./images/teammember2-768@2x.jpg 2x" 
                   media="(max-width: 1199px)" 
                   sizes="(min-width: 768px) 354px, 50vw">
+                <source srcset="./images/teammember2.jpg" 
+                  media="(min-width: 1200px)" 
+                  sizes="(min-width: 1200px) 270px, 25vw">
                 <img
                   src="./images/teammember2-480.jpg"
                   alt="Портрет Ольги Рєпіної"
@@ -283,6 +289,9 @@
                 <source srcset="./images/teammember3-768.jpg 1x, ./images/teammember3-768@2x.jpg 2x" 
                   media="(max-width: 1199px)" 
                   sizes="(min-width: 768px) 354px, 50vw">
+                <source srcset="./images/teammember3.jpg" 
+                  media="(min-width: 1200px)" 
+                  sizes="(min-width: 1200px) 270px, 25vw">
                 <img
                   src="./images/teammember3-480.jpg"
                   alt="Портрет Миколи Тарасова"
@@ -325,6 +334,9 @@
                 <source srcset="./images/teammember4-768.jpg 1x, ./images/teammember4-768@2x.jpg 2x" 
                   media="(max-width: 1199px)" 
                   sizes="(min-width: 768px) 354px, 50vw">
+                <source srcset="./images/teammember4.jpg" 
+                  media="(min-width: 1200px)" 
+                  sizes="(min-width: 1200px) 270px, 25vw">
                 <img
                   src="./images/teammember4-480.jpg"
                   alt="Портрет Михайла Єрмакова"               
