Виправляє помилки після валідатора

--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
           <ul class="team__list list">
             <li class="team__item">
               <picture class="team__img">
-                <source srcset="./images/teammember1-480.jpg 1x, ./images/teammember1-480@2x.jpg 2x" 
+                <source srcset="./images/teammember1-480.jpg 450w, ./images/teammember1-480@2x.jpg 900w" 
                   media="(max-width: 767px)" 
                   sizes="(min-width: 480px) 450px, 100vw">
-                <source srcset="./images/teammember1-768.jpg 1x, ./images/teammember1-768@2x.jpg 2x" 
+                <source srcset="./images/teammember1-768.jpg 354w, ./images/teammember1-768@2x.jpg 708w" 
                   media="(max-width: 1199px)" 
                   sizes="(min-width: 768px) 354px, 50vw">
-                <source srcset="./images/teammember1.jpg" 
+                <source srcset="./images/teammember1.jpg 1200w, ./images/teammember1@2x.jpg 2400w" 
                   media="(min-width: 1200px)" 
                   sizes="(min-width: 1200px) 270px, 25vw">
                 <img
@@ -238,13 +238,13 @@
             </li>
             <li class="team__item">
               <picture class="team__img">
-                <source srcset="./images/teammember2-480.jpg 1x, ./images/teammember2-480@2x.jpg 2x" 
+                <source srcset="./images/teammember2-480.jpg 450w, ./images/teammember2-480@2x.jpg 900w" 
                   media="(max-width: 767px)" 
                   sizes="(min-width: 480px) 450px, 100vw">
-                <source srcset="./images/teammember2-768.jpg 1x, ./images/teammember2-768@2x.jpg 2x" 
+                <source srcset="./images/teammember2-768.jpg 354w, ./images/teammember2-768@2x.jpg 708w" 
                   media="(max-width: 1199px)" 
                   sizes="(min-width: 768px) 354px, 50vw">
-                <source srcset="./images/teammember2.jpg" 
+                <source srcset="./images/teammember2.jpg 1200w, ./images/teammember2@2x.jpg 2400w" 
                   media="(min-width: 1200px)" 
                   sizes="(min-width: 1200px) 270px, 25vw">
                 <img
@@ -283,13 +283,13 @@
             </li>
             <li class="team__item">
               <picture class="team__img">
-                <source srcset="./images/teammember3-480.jpg 1x, ./images/teammember3-480@2x.jpg 2x" 
+                <source srcset="./images/teammember3-480.jpg 450w, ./images/teammember3-480@2x.jpg 900w" 
                   media="(max-width: 767px)" 
                   sizes="(min-width: 480px) 450px, 100vw">
-                <source srcset="./images/teammember3-768.jpg 1x, ./images/teammember3-768@2x.jpg 2x" 
+                <source srcset="./images/teammember3-768.jpg 354w, ./images/teammember3-768@2x.jpg 708w" 
                   media="(max-width: 1199px)" 
                   sizes="(min-width: 768px) 354px, 50vw">
-                <source srcset="./images/teammember3.jpg" 
+                <source srcset="./images/teammember3.jpg 1200w, ./images/teammember3@2x.jpg 2400w" 
                   media="(min-width: 1200px)" 
                   sizes="(min-width: 1200px) 270px, 25vw">
                 <img
@@ -328,13 +328,13 @@
             </li>
             <li class="team__item">
               <picture class="team__img">
-                <source srcset="./images/teammember4-480.jpg 1x, ./images/teammember4-480@2x.jpg 2x" 
+                <source srcset="./images/teammember4-480.jpg 450w, ./images/teammember4-480@2x.jpg 900w" 
                   media="(max-width: 767px)" 
                   sizes="(min-width: 480px) 450px, 100vw">
-                <source srcset="./images/teammember4-768.jpg 1x, ./images/teammember4-768@2x.jpg 2x" 
+                <source srcset="./images/teammember4-768.jpg 354w, ./images/teammember4-768@2x.jpg 708w" 
                   media="(max-width: 1199px)" 
                   sizes="(min-width: 768px) 354px, 50vw">
-                <source srcset="./images/teammember4.jpg" 
+                <source srcset="./images/teammember4.jpg 1200w, ./images/teammember1@4x.jpg 2400w" 
                   media="(min-width: 1200px)" 
                   sizes="(min-width: 1200px) 270px, 25vw">
                 <img
@@ -570,17 +570,16 @@
         class="mobile-menu__btn-close js-close-menu"
         type="button"
         aria-expanded="false"
-        aria-controls="mobile-btn"
-      >
+        >
           <svg
           width="40px"
           height="40px"
           aria-label="Перемикач мобільного меню"
-        >
+          >
            <use
             class="mobile-btn-close__icon"
             href="./images/icons.svg#icon-header-close_40px"
-          ></use>
+            ></use>
           </svg>
         </button>
 
