--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
               <h3 class="works__title">Десктопні додатки</h3>
               <img
                 class="works__img"
+                srcset="./images/whatwedo1.jpg 1x, ./images/whatwedo1@2x.jpg 2x"
                 src="./images/whatwedo1.jpg"
                 alt="Руки програміста набирають код"
                 width="370"
@@ -168,6 +169,7 @@
               <h3 class="works__title">Мобільні додатки</h3>
               <img
                 class="works__img"
+                srcset="./images/whatwedo2.jpg 1x, ./images/whatwedo2@2x.jpg 2x"
                 src="./images/whatwedo2.jpg"
                 alt="Смартфон та ноутбук на якому пишуть код для смартфона"
                 width="370"
@@ -177,6 +179,7 @@
               <h3 class="works__title">Дизайнерські рішення</h3>
               <img
                 class="works__img"
+                srcset="./images/whatwedo3.jpg 1x, ./images/whatwedo3@2x.jpg 2x"
                 src="./images/whatwedo3.jpg"
                 alt="Планшет на якому відкрита палітра кольорів"
                 width="370"
@@ -533,7 +536,7 @@
         <nav class="mobile-menu__nav">
           <ul class="list js-menu-container">
             <li>
-              <a class="mobile-menu__link link current" href="./index.html">Студія</a>
+              <a class="mobile-menu__link link" href="./index.html">Студія</a>
             </li>
             <li>
               <a class="mobile-menu__link link" href="./portfolio.html">Портфоліо</a>
@@ -583,7 +586,7 @@
           </svg>
         </button>
 
-      </div>
+    </div>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
