--- a/portfolio.html
+++ b/portfolio.html
@@ -421,7 +421,7 @@
         <nav class="mobile-menu__nav">
           <ul class="list js-menu-container">
             <li>
-              <a class="mobile-menu__link link current" href="./index.html">Студія</a>
+              <a class="mobile-menu__link link" href="./index.html">Студія</a>
             </li>
             <li>
               <a class="mobile-menu__link link" href="./portfolio.html">Портфоліо</a>
