Стилізує посилання на поточну сторінку в мобільному меню

--- a/portfolio.html
+++ b/portfolio.html
@@ -424,7 +424,7 @@
               <a class="mobile-menu__link link" href="./index.html">Студія</a>
             </li>
             <li>
-              <a class="mobile-menu__link link" href="./portfolio.html">Портфоліо</a>
+              <a class="mobile-menu__link link mobile-current" href="./portfolio.html">Портфоліо</a>
             </li>
             <li>
               <a class="mobile-menu__link link" href="">Контакти</a>
